--- a/debian/mame.ini
+++ b/debian/mame.ini
@@ -37,3 +37,5 @@ multithreading           0
 window                   0
 # Enable mouse support
 mouse                    1
+# Set key to toggle full/partial emulation to Ins
+uimodekey                INSERT
